nginx/deployment.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx
  namespace: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      securityContext:
        fsGroup: 101
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: nginx
          image: docker.io/nginx:1.31.6-alpine
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 101
            capabilities:
              drop:
              - ALL
          volumeMounts:
            - mountPath: /tmp
              name: emptydir
              subPath: tmp-dir
            - mountPath: /run
              name: emptydir
              subPath: run-dir
            - mountPath: /var/cache/nginx/client_temp
              name: emptydir
              subPath: client-temp-dir
            - mountPath: /var/cache/nginx/proxy_temp
              name: emptydir
              subPath: proxy-temp-dir
            - mountPath: /var/cache/nginx/fastcgi_temp
              name: emptydir
              subPath: fastcgi-temp-dir
            - mountPath: /var/cache/nginx/uwsgi_temp
              name: emptydir
              subPath: uwsgi-temp-dir
            - mountPath: /var/cache/nginx/scgi_temp
              name: emptydir
              subPath: scgi-temp-dir
      volumes:
        - emptyDir: {}
          name: emptydir
