nginx/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: default
spec:
  ingressClassName: traefik-external
  entryPoints:
    - websecure
  routes:
    - match: Host(`nginx.mandariini.uk`)
      kind: Rule
      services:
        - name: nginx
          namespace: nginx
          port: 80
      middlewares:
        - name: default-headers
          namespace: default
  tls:
    secretName: mandariini-uk-tls
