nginx/nginx.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx
  namespace: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      securityContext:
        fsGroup: 101
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: nginx
          image: nginx:1.29.6-alpine
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 101
            capabilities:
              drop:
              - ALL
          volumeMounts:
            - mountPath: /tmp
              name: emptydir
              subPath: tmp-dir
            - mountPath: /run
              name: emptydir
              subPath: run-dir
            - mountPath: /var/cache/nginx/client_temp
              name: emptydir
              subPath: client-temp-dir
            - mountPath: /var/cache/nginx/proxy_temp
              name: emptydir
              subPath: proxy-temp-dir
            - mountPath: /var/cache/nginx/fastcgi_temp
              name: emptydir
              subPath: fastcgi-temp-dir
            - mountPath: /var/cache/nginx/uwsgi_temp
              name: emptydir
              subPath: uwsgi-temp-dir
            - mountPath: /var/cache/nginx/scgi_temp
              name: emptydir
              subPath: scgi-temp-dir
      volumes:
        - emptyDir: {}
          name: emptydir
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx
spec:
  selector:
    app: nginx
  ports:
  - name: http
    targetPort: 80
    port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nginx.mandariini.uk`)
      kind: Rule
      services:
        - name: nginx
          namespace: nginx
          port: 80
      middlewares:
        - name: default-headers
          namespace: default
  tls:
    secretName: mandariini-uk-tls
